Fixed dark mode for Mapbox pop-up tip

--- a/docs/css/dark.css
+++ b/docs/css/dark.css
@@ -85,6 +85,14 @@
         border-top-color: var(--mdc-theme-surface) !important;
     }
 
+    .mapboxgl-popup-anchor-right .mapboxgl-popup-tip {
+        border-left-color: var(--mdc-theme-surface) !important;
+    }
+
+    .mapboxgl-popup-anchor-left .mapboxgl-popup-tip {
+        border-right-color: var(--mdc-theme-surface) !important;
+    }
+
     .mdc-data-table__header-cell, .mdc-data-table__cell {
         color: var(--mdc-theme-text-primary-on-light) !important;
     }
